# django-extension

./: .gitignore  README.md  pyproject.toml
src/django_extended/admin/: __init__.py  tabular.py
src/django_extended/forms/: fields.py
src/django_extended/schema/: fields.py  interfaces.py  mutations.py
src/django_extended/serializers/: __init__.py  fields.py
src/django_extension/admin/: __init__.py  model.py  tabular.py
src/django_extension/filters/: __init__.py  id.py
src/django_extension/forms/: __init__.py  fields.py  widgets.py
src/django_extension/models/: __init__.py  constraints.py  queryset.py
src/django_extension/schema/: fields.py  mutations.py  permissions.py  types.py
src/django_extension/schema/mutations/: __init__.py  delete.py  list.py  model.py
src/django_extension/schema/types/: __init__.py  enum.py
src/django_extension/serializers/: __init__.py  fields.py
src/django_extension/tests/: __init__.py
src/django_extension/views/: __init__.py  authentication.py  init.py  renderer.py
src/django_extension/viewsets/: __init__.py
